# ressic

./: .gitignore  Cargo.toml  Containerfile  README.md  ROADMAP.md  tasks.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  prompt-setupapi.md  validation-migration-plan.md
.github/workflows/: container.yml
examples/: rss_demo.rs
src/: api.rs  lib.rs  main.rs  models.rs  storage.rs
src/generator/: mock.rs  mod.rs  plain_text.rs  rss20.rs
src/storage/: local.rs  mock.rs  mod.rs
tests/: api_tests.rs  generator_tests.rs  model_validation_tests.rs  rss_generator_tests.rs  storage_tests.rs  test_client.rs
tests/common/: mod.rs
tests/generators/: mod.rs  plain_text_tests.rs  rss20_tests.rs
